--- a/src/app/component/progressbar/progressbar.component.html
+++ b/src/app/component/progressbar/progressbar.component.html
@@ -24,7 +24,7 @@
           <td>
             <span>{{ id }}</span>
           </td>
-          <td>
+          <td class="text-left">
             <span>{{ exam.title }}</span>
           </td>
           <td>
