--- a/src/app/component/home/home.component.css
+++ b/src/app/component/home/home.component.css
@@ -3,8 +3,9 @@
 }
 
 .text-info {
-    font-size: 20px;
+    font-size: 20px; 
     color: black !important;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: justify;
 }
 
