--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -8,7 +8,7 @@
                     href="javascript:void(0)">
                     <i [ngClass]="(showMobileMenu)?'ti-close':'ti-menu'"></i>
                 </a>
-                <a class="navbar-brand" href="/">
+                <a class="navbar-brand" href="/dashboard">
                    
                     <b class="logo-icon">
                             <img src="../../assets/images/logo/logo-black.png" width="95%" alt="homepage" class="dark-logo" />
