--- a/src/app/component/edit-exam/edit-exam.component.html
+++ b/src/app/component/edit-exam/edit-exam.component.html
@@ -1,17 +1,258 @@
-
-
-<div class="card">
-    <div class="card-body">
-      <div id="table" class="table-editable">
-        <span class="table-add float-right mb-3 mr-2">
-          <a class="text-success">
-            <i class="fa fa-plus-circle fa-4x" style="color: #218838" aria-hidden="true" 
-            ></i>
-          </a>
-        </span>
-     
+<form class="login100-form validate-form" #loginForm="ngForm">
+  <div class="wrap-input100 validate-input m-b-26">
+    <span class="label-input100">Име</span>
+    <input
+      class="input100"
+      type="text"
+      name="title"
+      required
+      minlength="4"
+      #title="ngModel"
+      [(ngModel)]="model.title"
+      placeholder="Въведете име на изпит"
+    />
+    <span class="focus-input100"></span>
+    <div
+      *ngIf="title.invalid && (title.dirty || title.touched)"
+      class="alert alert-danger"
+    >
+      <div *ngIf="title?.errors.required">
+        Полето е задължително
+      </div>
+      <div *ngIf="title?.errors.minlength">
+        Име трябва да е с дължина поне 4 символа
       </div>
     </div>
   </div>
-  <!-- Editable table -->
-  
+
+  <div class="wrap-input100 validate-input m-b-18">
+    <span class="label-input100">Брой въпроси</span>
+    <input
+      class="input100"
+      type="number"
+      name="countQuestions"
+      required
+      disabled
+      #countQuestions="ngModel"
+      [(ngModel)]="model.countQuestions"
+      value="{{ model.questions.length }}"
+      placeholder="Въведете брой въпроси"
+    />
+    <span class="focus-input100"></span>
+    <div
+      *ngIf="
+        countQuestions.invalid &&
+        (countQuestions.dirty || countQuestions.touched)
+      "
+      class="alert alert-danger"
+    >
+      <div *ngIf="countQuestions?.errors.required">
+        Полето е задължително
+      </div>
+    </div>
+  </div>
+
+  <div class="wrap-input100 validate-input m-b-18">
+    <span class="label-input100">Време (минути)</span>
+    <input
+      class="input100"
+      type="number"
+      name="timeLimit"
+      required
+      #timeLimit="ngModel"
+      [(ngModel)]="model.timeLimit"
+      placeholder="Въведете време (минути)"
+    />
+    <span class="focus-input100"></span>
+    <div
+      *ngIf="timeLimit.invalid && (timeLimit.dirty || timeLimit.touched)"
+      class="alert alert-danger"
+    >
+      <div *ngIf="timeLimit?.errors.required">
+        Полето е задължително
+      </div>
+    </div>
+  </div>
+</form>
+
+<!------------------------------- Questions table --------------------------------->
+
+<div class="card">
+  <div class="card-body">
+    <div id="table" class="table-editable">
+      <span class="table-add float-right mb-3 mr-2">
+        <i
+          class="fa fa-plus-circle fa-4x"
+          style="color: #218838"
+          aria-hidden="true"
+          (click)="add()"
+        ></i>
+      </span>
+      <table
+        class="table table-bordered table-responsive-md table-striped text-center"
+      >
+        <tr>
+          <th class="text-center">№</th>
+          <th class="text-center">Въпрос</th>
+          <th class="text-center">Действия</th>
+        </tr>
+        <tr *ngFor="let question of model.questions; let id = index">
+          <td>
+            <span>{{ question.orderId }}</span>
+          </td>
+          <td class="text-left">
+            <span
+              contenteditable="true"
+              (keyup)="changeValue(id, 'title', $event)"
+              (blur)="updateList(id, 'title', $event)"
+              >{{ question.title }}</span
+            >
+          </td>
+
+          <td>
+            <span class="table-remove">
+              <!-- <button type="button" mdbBtn color="danger" rounded="true" size="sm" class="my-0" (click)="remove(id)">Remove</button> -->
+              <span class="table-remove">
+                <button
+                  type="button"
+                  mdbBtn
+                  color="danger"
+                  rounded="true"
+                  size="sm"
+                  class="my-0"
+                  (click)="openModal(preview, question.orderId)"
+                >
+                  <i
+                    class="fa fa-eye fa-lg"
+                    style="color: #28A745"
+                    aria-hidden="true"
+                  ></i>
+                </button>
+              </span>
+              <span class="table-remove">
+                <button
+                  type="button"
+                  mdbBtn
+                  color="danger"
+                  rounded="true"
+                  size="sm"
+                  class="my-0"
+                  (click)="remove(id)"
+                >
+                  <i
+                    class="fa fa-trash fa-lg ml-2"
+                    style="color: #F62D51"
+                    aria-hidden="true"
+                  ></i>
+                </button>
+              </span>
+            </span>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
+
+<!------------------------------- Save --------------------------------->
+
+<button class="btn btn-block btn-success text-white ml-3" (click)="save()">
+  Запиши
+</button>
+
+<button class="btn btn-block btn-success text-white ml-3" [routerLink]="['/component/progressbar']">
+  Назад
+</button>
+
+<!------------------------------- Modal --------------------------------->
+
+<ng-template #preview let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title">{{questTitle}}</h4>
+    <button
+      type="button"
+      class="close"
+      aria-label="Close"
+      (click)="modal.dismiss('Cross click')"
+    >
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <!------------------------------- Answers table --------------------------------->
+
+    <div id="table" class="table-editable">
+      <span class="table-add float-right mb-3 mr-2">
+        <i
+          class="fa fa-plus-circle fa-4x"
+          style="color: #218838"
+          aria-hidden="true"
+          (click)="addAnswer()"
+        ></i>
+      </span>
+      <table
+        class="table table-bordered table-responsive-md table-striped text-center"
+      >
+        <tr>
+          <th class="text-center">№</th>
+          <th class="text-center">Отговор</th>
+          <th class="text-center">Правилен</th>
+          <th class="text-center">Действия</th>
+        </tr>
+        <tr *ngFor="let answer of answers; let id = index">
+          <td>
+            <span>{{ answer.intId }}</span>
+          </td>
+          <td class="text-left">
+            <span
+              contenteditable="true"
+              (keyup)="changeValue(id, 'title', $event)"
+              (blur)="updateList(id, 'title', $event)"
+              >{{ answer.title }}</span
+            >
+          </td>
+          <td class="text-center">
+            <input type="checkbox" name="answers" [ngModel]="answer.selected" (change)="selectAnswer(answer.intId)"/>
+          </td>
+          <td >
+            <span class="table-remove">
+              <span class="table-remove">
+                <button
+                  type="button"
+                  mdbBtn
+                  color="danger"
+                  rounded="true"
+                  size="sm"
+                  class="my-0"
+                  (click)="removeAnswer(answer.intId)"
+                >
+                  <i
+                    class="fa fa-trash fa-lg ml-2"
+                    style="color: #F62D51"
+                    aria-hidden="true"
+                  ></i>
+                </button>
+              </span>
+            </span>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button
+      type="button"
+      class="btn btn-danger"
+      (click)="modal.close('Close click')"
+    >
+      Затвори
+    </button>
+    <button
+    type="button"
+    class="btn btn-success"
+    (click)="modal.close('Close click')"
+  >
+    Запиши
+  </button>
+  </div>
+</ng-template>
