--- a/src/app/component/progressbar/progressbar.component.html
+++ b/src/app/component/progressbar/progressbar.component.html
@@ -39,7 +39,7 @@
                 rounded="true"
                 size="sm"
                 class="my-0"
-                (click)="openModal(preview)"
+                (click)="previewExam(exam.intId)"
               >
                 <i
                   class="fa fa-eye fa-lg"
