--- a/src/app/component/preview-exam/preview-exam.component.html
+++ b/src/app/component/preview-exam/preview-exam.component.html
@@ -92,7 +92,7 @@
   
   <!------------------------------- Back --------------------------------->
   
-  <button class="btn btn-block btn-success text-white ml-3" [routerLink]="['/component/progressbar']">
+  <button class="btn btn-block btn-success text-white ml-3" [routerLink]="['/component/teacher-exam']">
     Назад
   </button>
   
