--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -19,7 +19,7 @@
     <div class="card-group">
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-          <div class="card" style="height: 100%;" [routerLink]="['/component/progressbar']">
+          <div class="card" style="height: 100%;" [routerLink]="['/component/teacher-exam']">
             <img
               class="card-img-top img-responsive"
               src="../../assets/images/exams.jpeg"
@@ -36,7 +36,7 @@
           </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-          <div class="card" style="height: 100%;" [routerLink]="['/component/rating']">
+          <div class="card" style="height: 100%;" [routerLink]="['/component/results']">
             <img
               class="card-img-top img-responsive"
               src="../../assets/images/results.jpg"
