--- a/src/app/component/edit-exam/edit-exam.component.html
+++ b/src/app/component/edit-exam/edit-exam.component.html
@@ -160,7 +160,7 @@
   Запиши
 </button>
 
-<button class="btn btn-block btn-success text-white ml-3" [routerLink]="['/component/progressbar']">
+<button class="btn btn-block btn-success text-white ml-3" [routerLink]="['/component/teacher-exam']">
   Назад
 </button>
 
