--- a/src/app/component/exam/exam.component.html
+++ b/src/app/component/exam/exam.component.html
@@ -73,7 +73,7 @@
                           <input
                             type="checkbox"
                             name="answers"
-                            [ngModel]="answer.selected"
+                            [ngModel]="answer.correct"
                             (change)="selectAnswer(answer.intId)"
                           />
                         </td>
