fix bug rename property id in class Answer and Questions

--- a/src/app/component/exam/exam.component.html
+++ b/src/app/component/exam/exam.component.html
@@ -74,7 +74,7 @@
                             type="checkbox"
                             name="answers"
                             [ngModel]="answer.correct"
-                            (change)="selectAnswer(answer.intId)"
+                            (change)="selectAnswer(answer.id)"
                           />
                         </td>
                         <td>
